--- a/application.yml
+++ b/application.yml
@@ -1,9 +1,8 @@
 spring:
   datasource:
-    username: postgres
-    password: postgres
-    url: jdbc:postgresql://localhost:5432/postgres
-    driver-class-name: org.postgresql.Driver
+    url: jdbc:h2:mem:mydb
+    username: h2
+    password: h2
+    driverClassName: org.h2.Driver
   jpa:
-    hibernate:
-      ddl-auto: create-drop
+    spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
